# iolp

./: .gitignore  Architecture.drawio  CODE_OF_CONDUCT.md  ChangeLog.md  LICENSE  LowCode.cabal  README.md  angular.json  ast-ui-ideas.txt  client_session_key.aes  karma.conf.js  low-code.cabal  package-lock.json  package.json  proxy.config.js  questions.txt  stack.yaml
IDE/: bower.json  package-lock.json  package.json  packages.dhall  questions.md  spago.dhall  todo.md
IDE/src/LowCode/: AST.purs  Drag.purs  Draggable.purs  EqEventTarget.js  EqEventTarget.purs  Main.purs  MouseEventType.purs  Point.purs  Util.purs
IDE/src/LowCode/Editor/: Editor.purs  Icons.purs  Main.purs
IDE/src/LowCode/Logic/: AST.purs
IDE/src/LowCode/Logic/Editor/: Editor.purs  Icons.purs  Main.purs
IDE/src/LowCode/UI/: AST.purs  Canvas.purs  Draggable.purs  Editor.purs  Element.purs  Main.purs  Property.purs
IDE/src/LowCode/UI/Editor/: Canvas.purs  Editor.purs  Main.purs
LowCode/: LowCode.fsproj  LowCode.sln  Program.fs  Utility.fs  prototype.html
LowCode/Logic/: AST.fs
LowCode/LowCode/: AST.fs  Codegen.fs  LowCode.fsproj
LowCode/LowCode/Logic/: Codegen.fs  Eval.fs
LowCode/UI/: AST.fs  Codegen.fs
app/: Config.hs  Database.hs  Foundation.hs  Main.hs
code-generator/: .gitignore  Grammar.md  README.md  low-code.cabal
code-generator/app/: Database.hs  Foundation.hs  Main.hs
code-generator/src/Language/: CSS.hs  Common.hs  HTML.hs  JavaScript.hs  LanguageConverter.hs
code-generator/src/Language/CSS/: AST.hs
code-generator/src/Language/HTML/: AST.hs  Codegen.hs
code-generator/src/Language/LowCode/Logic/: AST.hs  Codegen.hs  Module.hs  Standard.hs  Structure.hs
code-generator/src/Language/LowCode/Logic/Standard/: JSON.hs  REST.hs
code-generator/test/: LogicModuleTests.hs  Main.hs
e2e/src/: app.e2e-spec.ts
ide/: .gitignore  karma.conf.js  package-lock.json  package.json  tslint.json
ide/src/: index.html  styles.scss
ide/src/app/: app-routing.module.ts  app.helpers.ts
ide/src/app/components/constants/: low-code-functions.constant.ts
ide/src/app/components/dashboard/: dashboard.component.scss
ide/src/app/components/dashboard/top-navbar/: top-navbar.component.html  top-navbar.component.ts
ide/src/app/components/domain/: element.ts  info.ts  output.ts  variable.ts
ide/src/app/components/login/: login.module.ts
ide/src/app/components/main/: main-layout.component.html  main-layout.component.scss
ide/src/app/components/main/canvas/: canvas.component.html  canvas.component.scss  canvas.component.ts
ide/src/app/components/main/comp-infos/: comp-infos.component.html  comp-infos.component.ts
ide/src/app/components/main/menu/side-navigation/: side-navigation.component.html  side-navigation.component.ts
ide/src/app/components/signup/: signup.component.ts  signup.module.ts
ide/src/app/services/alert/: alert.service.ts
ide/src/app/services/auth/: auth.service.ts
ide/src/app/services/dashboard/: dashboard.service.ts
ide/src/app/services/set-component/: set-component.service.ts
ide/src/app/services/show-component-info/: show-component-info.service.ts
ide/src/assets/js/: inspinia.js
ide/src/environments/: environment.prod.ts
jsbits/: JSON.js  LowCode.js  REST.js
src/: LowCode.hs  Main.hs  Utility.hs  index.html  styles.scss  test.ts
src/Language/: Bundles.hs  Codegen.hs  Common.hs  Emit.hs  HTML.hs  JavaScript.hs  LanguageConverter.hs  LowCode.hs
src/Language/CSS/: AST.hs  Codegen.hs
src/Language/HTML/: AST.hs  Attributes.hs  Codegen.hs  Elements.hs  Printer.hs
src/Language/JavaScript/: AST.hs  Codegen.hs  Printer.hs
src/Language/LowCode/: Codegen.hs  Emit.hs  Logic.hs  UI.hs
src/Language/LowCode/Logic/: AST.hs  Analyzer.hs  Codegen.hs  Error.hs  ExpressionParser.hs  JavaScriptConverter.hs  Module.hs  Parser.hs  Prim.hs  Standard.hs  Structure.hs  Type.hs  Types.hs
src/Language/LowCode/Logic/Standard/: JSON.hs  Prelude.hs
src/Language/LowCode/UI/: AST.hs  Codegen.hs  HTMLConverter.hs
src/LowCode/: Codegen.hs  Emit.hs  Logic.hs  UI.hs
src/LowCode/Logic/: Codegen.hs
src/LowCode/UI/: Codegen.hs
src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
src/app/components/constants/: low-code-functions.constant.ts
src/app/components/dashboard/: dashboard.component.html  dashboard.component.ts  dashboard.module.ts
src/app/components/domain/: element.ts  info.ts  logic-components.ts  output.ts  project.ts  statement-group.ts
src/app/components/login/: login.component.html  login.component.ts  login.module.ts
src/app/components/main/: main-layout.component.html  main-layout.component.scss  main-layout.component.ts  main.module.ts  main.routing.module.ts
src/app/components/main/canvas/: canvas.component.html  canvas.component.scss  canvas.component.ts
src/app/components/main/comp-infos/: comp-infos.component.html  comp-infos.component.scss  comp-infos.component.ts
src/app/components/main/menu/side-navigation/: side-navigation.component.html  side-navigation.component.scss  side-navigation.component.ts
src/app/components/main/menu/top-navbar/: top-navbar.component.html  top-navbar.component.scss  top-navbar.component.ts
src/app/components/signup/: signup.component.html
src/app/services/alert/: alert.service.ts
src/app/services/auth/: auth.service.ts
src/app/services/send/: .send.service.ts.swp  send.service.ts
src/app/services/spawn/: spawn-component.service.ts
src/app/services/translate/: translate-keys.service.ts  translate.service.ts
src/assets/css/: style.css  style.min.css
src/assets/js/: get-css.js  inspinia.js
src/environments/: environment.prod.ts
test/: AST.hs  Main.hs
