author:              Heitor Toledo Lassarote de Paula
build-type:          Simple
cabal-version:       >=1.10
category:            Language
copyright:           Copyright (c) 2020 Bruno Pereira Garcia Caputo, Heitor Toledo Lassarote de Paula & Mauro Alexandre Amaro da Cruz
extra-source-files:  ChangeLog.md
homepage:            https://github.com/heitor-lassarote/low-code
license:             MIT
license-file:        LICENSE
maintainer:          heitortoledo@gec.inatel.br
name:                low-code
synopsis:            A low-code platform for generating builds and source codes.
version:             0.1.0.0

source-repository head
  type: git
  location: https://github.com/heitor-lassarote/low-code

executable LowCode
  build-depends:
      aeson                 >=1 && <2
    , base                  >=4 && <5
    , cryptonite            >=0 && <1
    , esqueleto             >=3 && <4
    , http-types            >=0 && <1
    , low-code              >=0 && <1
    , monad-logger          >=0 && <1
    , optparse-applicative  >=0 && <1
--    , path                  >=0 && <1
    , persistent            >=2 && <3
    , persistent-postgresql >=2 && <3
    , persistent-template   >=2 && <3
--    , temporary             >=1 && <2
    , text                  >=1 && <2
    , universum             >=1 && <2
    , unliftio-core         >=0 && <1
    , yesod                 >=1 && <2
    , yesod-persistent      >=1 && <2
--    , zip                   >=1 && <2
  default-extensions:
      BlockArguments
    , DeriveAnyClass
    , DeriveGeneric
    , DerivingStrategies
    , FlexibleContexts
    , GADTs
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
    , NoImplicitPrelude
    , OverloadedStrings
    , QuasiQuotes
    , RecordWildCards
    , StandaloneDeriving
    , TemplateHaskell
    , TypeFamilies
    , ViewPatterns
  default-language:     Haskell2010
  other-extensions:
      UndecidableInstances
  other-modules:
      Database
    , Foundation
  ghc-options:          -Wall -Werror -Wincomplete-uni-patterns -Wcompat
  hs-source-dirs:       app
  main-is:              Main.hs

library
  build-depends:
      aeson                 >=1 && <2
    , base                  >=4 && <5
    , containers            >=0 && <1
    , megaparsec            >=8 && <9
    , text                  >=1 && <2
    , transformers          >=0 && <1
    , universum             >=1 && <2
  default-extensions:
      BlockArguments
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveGeneric
    , FlexibleInstances
    , LambdaCase
    , MultiParamTypeClasses
    , NoImplicitPrelude
    , OverloadedStrings
    , TypeFamilies
  default-language:     Haskell2010
  exposed-modules:
      Language.Bundles
    , Language.Codegen
    , Language.Common
    , Language.CSS
    , Language.CSS.AST
    , Language.CSS.Codegen
    , Language.Emit
    , Language.HTML
    , Language.HTML.AST
    , Language.HTML.Codegen
    , Language.JavaScript
    , Language.JavaScript.AST
    , Language.JavaScript.Codegen
    , Language.LanguageConverter
    , Language.LowCode.Logic
    , Language.LowCode.Logic.Analyzer
    , Language.LowCode.Logic.AST
    , Language.LowCode.Logic.Prim
    , Language.LowCode.Logic.Types
    , Language.LowCode.Logic.JavaScriptConverter
    , Language.LowCode.UI
    , Language.LowCode.UI.AST
    , Language.LowCode.UI.HTMLConverter
  ghc-options:          -Wall -Werror -Wincomplete-uni-patterns -Wcompat
  hs-source-dirs:       src

test-suite test
  build-depends:
      low-code              >=0 && <1
    , universum             >=1 && <2
  default-language:     Haskell2010
  ghc-options:          -Wall -Werror -Wincomplete-uni-patterns -Wcompat
  hs-source-dirs:       test
  main-is:              Tests.hs
  type:                 exitcode-stdio-1.0
