cabal-version:       2.2
author:              Heitor Toledo Lassarote de Paula
build-type:          Simple
category:            Language
copyright:           Copyright (c) 2020 Bruno Pereira Garcia Caputo, Heitor Toledo Lassarote de Paula & Mauro Alexandre Amaro da Cruz
extra-source-files:  ChangeLog.md
homepage:            https://github.com/heitor-lassarote/low-code
license:             MIT
license-file:        LICENSE
maintainer:          heitortoledo@gec.inatel.br
name:                low-code
synopsis:            A low-code platform for generating builds and source codes.
version:             0.1.0.0

source-repository head
  type: git
  location: https://github.com/heitor-lassarote/low-code

flag lib-Werror
  default: False
  manual:  True

common shared-properties
  build-depends:
      base                  >=4 && <5
    , universum             >=1 && <2
  default-extensions:
      ApplicativeDo
    , BangPatterns
    , BlockArguments
    , DeriveFunctor
    , FlexibleContexts
    , FlexibleInstances
    , LambdaCase
    , NoImplicitPrelude
    , OverloadedStrings
    , RecordWildCards
    , TypeFamilies
  default-language:     Haskell2010

executable low-code
  import:               shared-properties
  build-depends:
      aeson                 >=1 && <2
    , cryptonite            >=0 && <1
    , data-default-class    >=0 && <1
    , esqueleto             >=3 && <4
    , fast-logger           >=3 && <4
    , http-types            >=0 && <1
    , low-code              >=0 && <1
    , monad-logger          >=0 && <1
    , optparse-applicative  >=0 && <1
    , persistent            >=2 && <3
    , persistent-postgresql >=2 && <3
    , persistent-template   >=2 && <3
    , template-haskell      >=2 && <3
    , text                  >=1 && <2
    , unliftio-core         >=0 && <1
    , wai                   >=3 && <4
    , wai-cors              >=0 && <1
    , wai-extra             >=3 && <4
    , warp                  >=3 && <4
    , warp-tls              >=3 && <4
    , yesod                 >=1 && <2
    , yesod-core            >=1 && <2
    , yesod-persistent      >=1 && <2
  default-extensions:
      DeriveAnyClass
    , DeriveGeneric
    , DerivingStrategies
    , GADTs
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
    , QuasiQuotes
    , StandaloneDeriving
    , TemplateHaskell
    , ViewPatterns
  if flag(lib-Werror)
    ghc-options:        -Werror
  ghc-options:          -Wall -Wincomplete-uni-patterns -Wcompat
  other-extensions:
      UndecidableInstances
  other-modules:
      Config
    , Database
    , Foundation
  hs-source-dirs:       app
  main-is:              Main.hs

library
  import:               shared-properties
  build-depends:
      aeson                 >=1 && <2
    , containers            >=0 && <1
    , data-default-class    >=0 && <1
    , directory             >=1 && <2
    , filepath              >=1 && <2
    , formatting            >=6 && <7
    , megaparsec            >=8 && <9
    , temporary             >=1 && <2
    , text                  >=1 && <2
    , transformers          >=0 && <1
    , zip                   >=1 && <2
  default-extensions:
      DeriveAnyClass
    , DeriveDataTypeable
    , DeriveGeneric
    , MultiParamTypeClasses
    , TupleSections
  exposed-modules:
      Language.Bundles
    , Language.Codegen
    , Language.Common
    , Language.CSS
    , Language.CSS.AST
    , Language.CSS.Codegen
    , Language.Emit
    , Language.HTML
    , Language.HTML.AST
    , Language.HTML.Codegen
    , Language.JavaScript
    , Language.JavaScript.AST
    , Language.JavaScript.Codegen
    , Language.LanguageConverter
    , Language.LowCode.Logic
    , Language.LowCode.Logic.Analyzer
    , Language.LowCode.Logic.AST
    , Language.LowCode.Logic.JavaScriptConverter
    , Language.LowCode.UI
    , Language.LowCode.UI.AST
    , Language.LowCode.UI.HTMLConverter
  if flag(lib-Werror)
    ghc-options:        -Werror
  ghc-options:          -Wall -Wincomplete-uni-patterns -Wcompat
  hs-source-dirs:       src

test-suite test
  import:               shared-properties
  build-depends:
      containers            >=0 && <1
    , data-default-class    >=0 && <1
    , HUnit                 >=1 && <2
    , low-code              >=0 && <1
    , QuickCheck            >=2 && <3
  hs-source-dirs:       test
  ghc-options:          -Wall -Wincomplete-uni-patterns -Wcompat
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0
